--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -1,27 +1,29 @@
-# workflow name
-name: Generate release-artifacts
+name: build
 
-# on events
 on:
-  release:
-    types:
-      - created
+  push:
+  pull_request:
 
-# workflow tasks
 jobs:
-  generate:
-    name: Generate cross-platform builds
+  xgo:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: sudo apt-get install -y libxtst-dev
-      - name: Generate build files
-        uses: thatisuday/go-cross-build@v1
+      - name: Build
+        uses: crazy-max/ghaction-xgo@v3.0.0
         with:
-          platforms: "linux/amd64, darwin/amd64, windows/amd64"
-          package: ""
-          name: ""
-          compress: "true"
-          dest: "dist"
+          xgo_version: latest
+          go_version: 1.22
+          dest: build
+          prefix: mv_cursor
+          targets: windows/amd64,linux/amd64,linux/arm64,darwin/arm64
+          v: true
+          x: true
+          race: false
+          ldflags: -s -w
+          buildmode: default
+          trimpath: true
+          buildvcs: true
