--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -28,14 +28,15 @@ jobs:
           buildmode: default
           trimpath: true
           buildvcs: true
-      - name: Upload artifacts
-        uses: echapmanFromBunnings/upload-artifact@3.0.0
-        with:
-          name: "releases"
-          path: "dist/**/*"
-          if-no-files-found: "warn" # Optional
-          retention-days: 10 # Optional
-      - uses: ncipollo/release-action@v1.14.0
+      #   - name: Upload artifacts
+      #     uses: echapmanFromBunnings/upload-artifact@3.0.0
+      #     with:
+      #       name: "releases"
+      #       path: "dist/**/*"
+      #       if-no-files-found: "warn" # Optional
+      #       retention-days: 10 # Optional
+      - name: Create release
+        uses: ncipollo/release-action@v1.14.0
         with:
           artifacts: "dist/**/*"
           body: "Yet another release"
